Added amble language server. Thus far enables go-to-def / find-references for Rooms, Items, and NPCs. Binaary works but source is currently broken.

--- a/extension.toml
+++ b/extension.toml
@@ -1,6 +1,6 @@
 id = "amble"
 name = "Amble"
-version = "0.9.5"
+version = "0.10.0"
 schema_version = 1
 authors = ["David Brown <djvbmd@protonmail.com>"]
 description = "Extension to support the Amble game engine DSL."
@@ -9,3 +9,7 @@ repository = "https://github.com/pygmy-twylyte/zed-amble-ext.git"
 [grammars.amble]
 repository = "https://github.com/pygmy-twylyte/tree-sitter-amble.git"
 rev = "88e46f93494bcec8f90103377ff909f6369cb793"
+
+[language_servers.amble-lsp]
+name = "Amble LSP"
+language = "Amble"
